--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
   border-style: solid;
   border-width: thin;
   border-color: black;
-  height: 600px;
-  width: 1000px;
+  margin: 5px 5px 5px 5px;
+  height: 1000px;
 }
 
 main {
@@ -32,13 +32,6 @@ article {
   width: 100%;
 }
 
-.image-container {
-  border-style: solid;
-  border-width: thin;
-  border-color: black;
-  height: 100%;
-  width: 33%;
-}
 img {
-  max-width: 100%;
+  max-width: 33%;
 }
