--- a/style.css
+++ b/style.css
@@ -1,37 +1,57 @@
 body {
-  border-style: solid;
-  border-width: thin;
-  border-color: black;
-  margin: 5px 5px 5px 5px;
-  height: 1000px;
+  padding: 5px 5px 5px 5px;
+  background-color: Gainsboro;
 }
 
 main {
-  border-style: solid;
-  border-width: thin;
-  border-color: black;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
 }
 
 article {
-  border-style: solid;
-  border-width: thin;
-  border-color: black;
-  height: 30%;
-  width: 100%
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  text-align: center;
 }
 
-.div-container {
+div {
   display: flex;
   flex-direction: row;
-  border-style: solid;
-  border-width: thin;
-  border-color: black;
-  height:70%;
+  justify-content: space-around;
+  align-items: center;
   width: 100%;
 }
 
+canvas {
+  max-width: 48%;
+  max-height: 90%;
+}
+
+p {
+  text-align: center;
+}
+
 img {
-  max-width: 33%;
+  max-width: 30%;
+  max-height: 500px;
+  padding: 2px 2px 2px 2px;
+  border-style: solid;
+  border-width: thin;
+  border-color: black;
+}
+
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  width: 85px;
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
