--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-  background-color: Gainsboro;
 }
 
 div {
@@ -24,7 +23,7 @@ div {
   justify-content: space-around;
   align-items: center;
   height: 800px;
-  width: 100%;
+  width:100%;
 }
 
 .header {
@@ -36,9 +35,18 @@ div {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 30%;
-  height: 400px;
+  border-style: solid;
+  border-width: thin;
+  border-color: black;
+  width: 25%;
+  height: 300px;
+  background-color: white;
   margin: 0px 10px 0px 10px;
+}
+.single-image:hover {
+  background-color: rgb(37, 250, 32);
+  width: 28%;
+  height: 325px;
 }
 
 .centered-text {
@@ -59,6 +67,7 @@ div {
 h1 {
   font-family: serif;
   font-size: 50px;
+  margin-bottom: 15px;
 }
 
 p {
@@ -67,13 +76,9 @@ p {
 }
 
 img {
-  border-style: solid;
-  border-width: thin;
-  border-color: black;
   max-height: 95%;
   max-width: 95%;
   padding: 5px 5px 5px 5px;
-  background-color: white;
 }
 
 button {
@@ -81,7 +86,11 @@ button {
   margin: 0px 5px 0px 5px;
 }
 
+button:hover {
+  background-color: rgb(37, 250, 32);
+}
+
 canvas {
-  max-width: 100%;
+  max-width: 70%;
   max-height: 100%;
 }
