--- a/style.css
+++ b/style.css
@@ -54,6 +54,11 @@ div {
   padding: 0% 20% 0% 20%;
 }
 
+.block-text {
+  text-indent: 5em;
+  line-height: 1.3em;
+}
+
 #survey-prompt {
   display: flex;
   justify-content: center;
@@ -93,4 +98,10 @@ button:hover {
 canvas {
   max-width: 70%;
   max-height: 100%;
+}
+
+hr {
+  max-width: 75%;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
