--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #F9CD00;
+  color: #372479;
+}
 div {
   width: 100%;
   margin: 2px 0px 2px 0px;
@@ -21,6 +25,7 @@ div {
   align-items: center;
   height: 800px;
   width:100%;
+  background-color: #FDE056;
 }
 
 .header {
@@ -37,11 +42,11 @@ div {
   border-color: black;
   width: 25%;
   height: 300px;
-  background-color: white;
+  background-color: #927800;
   margin: 0px 10px 0px 10px;
 }
 .single-image:hover {
-  background-color: rgb(37, 250, 32);
+  background-color: #372479;
   width: 28%;
   height: 325px;
 }
@@ -89,7 +94,7 @@ button {
 }
 
 button:hover {
-  background-color: rgb(37, 250, 32);
+  background-color: #927800;
 }
 
 canvas {
